--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -6,12 +6,36 @@
                 <span class="list-group-item-value">Dashboard</span>
             </a>
         </li>
-        <li class="list-group-item">
+        <li class="list-group-item secondary-nav-item-pf" data-target="#event-secondary">
             <a>
-                <span class="fa pficon-flag" data-toggle="tooltip" title="Tournament"></span>
-                <span class="list-group-item-value">Tournament</span>
+                <span class="glyphicon glyphicon-calendar" data-toggle="tooltip" title="Events"></span>
+                <span class="list-group-item-value">Events</span>
             </a>
+            <div id="event-secondary" class="nav-pf-secondary-nav">
+                <div class="nav-item-pf-header">
+                    <a class="secondary-collapse-toggle-pf" data-toggle="collapse-secondary-nav"></a>
+                    <span>Events</span>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item " data-target="#event-detracto-tertiary">
+                        <a>
+                            <span class="list-group-item-value">GGC 2017</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item " data-target="#event-mediocrem-tertiary">
+                        <a>
+                            <span class="list-group-item-value">GGC 2016</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item " data-target="#event-corrumpit-tertiary">
+                        <a>
+                            <span class="list-group-item-value">GGC 2015</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li>
+
         <li class="list-group-item">
             <a>
                 <span class="fa pficon-help" data-toggle="tooltip" title="FAQ"></span>
