--- a/app/views/application/_menu_top.html.erb
+++ b/app/views/application/_menu_top.html.erb
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="navbar-brand">
-                <%= image_tag("ggc_web_color", width: "64") %>
+                <%= image_tag("ggc_web_color", width: "72") %>
             </a>
         </div>
         <nav class="collapse navbar-collapse">
@@ -22,7 +22,9 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown_about">
-                        <li><a href="#" data-toggle="modal" data-target="#about-modal">About</a></li>
+                        <li>
+                            <a href="#" data-toggle="modal" data-target="#about-modal">About</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -32,7 +34,9 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown_user_pref">
                         <li><a href="#">Preferences</a></li>
-                        <li><a href="#">Logout</a></li>
+                        <li>
+                            <%= link_to "Logout", logout_path, method: :delete %>
+                        </li>
                     </ul>
                 </li>
             </ul>
