--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,20 @@
+<div class="col-md-offset-2">
+    <% flash.each do |key, value| %>
+    <div id="error_explanation" class="alert alert-<%=key%>" role="alert">
+        <p>
+            <%= value %>
+        </p>
+    </div>
+    <% end %>
+    <% if @user.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger">
+        <h5><%= pluralize(@user.errors.count, "error") %> canceled your registration:</h5>
+        <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+        </ul>
+    </div>
+    <% end %>
+</div>
 <%= render 'form_new' %>
