--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -17,17 +17,17 @@
                     <span>Events</span>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item " data-target="#event-detracto-tertiary">
+                    <li class="list-group-item " data-target="#event-ggc2017-tertiary">
                         <a>
                             <span class="list-group-item-value">GGC 2017</span>
                         </a>
                     </li>
-                    <li class="list-group-item " data-target="#event-mediocrem-tertiary">
+                    <li class="list-group-item " data-target="#event-ggc2016-tertiary">
                         <a>
                             <span class="list-group-item-value">GGC 2016</span>
                         </a>
                     </li>
-                    <li class="list-group-item " data-target="#event-corrumpit-tertiary">
+                    <li class="list-group-item " data-target="#event-ggc2015-tertiary">
                         <a>
                             <span class="list-group-item-value">GGC 2015</span>
                         </a>
@@ -35,12 +35,40 @@
                 </ul>
             </div>
         </li>
-
         <li class="list-group-item">
             <a>
                 <span class="fa pficon-help" data-toggle="tooltip" title="FAQ"></span>
                 <span class="list-group-item-value">FAQ</span>
             </a>
+        </li>
+        <li class="list-group-item secondary-nav-item-pf" data-target="#settings-secondary">
+            <a>
+                <span class="glyphicon glyphicon-cog" data-toggle="tooltip" title="Settings"></span>
+                <span class="list-group-item-value">Settings</span>
+            </a>
+            <div id="settings-secondary" class="nav-pf-secondary-nav">
+                <div class="nav-item-pf-header">
+                    <a class="secondary-collapse-toggle-pf" data-toggle="collapse-secondary-nav"></a>
+                    <span>Settings</span>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <a>
+                            <span class="list-group-item-value">Personal infos</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a>
+                            <span data-toggle="modal" data-target="#about-modal" class="list-group-item-value">About</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item">
+                        <%= link_to logout_path, :method => :delete do %>
+                        <span class="list-group-item-value">Logout</span>
+                        <% end %>
+                    </li>
+                </ul>
+            </div>
         </li>
     </ul>
 </div>
