--- a/app/views/application/_menu_top.html.erb
+++ b/app/views/application/_menu_top.html.erb
@@ -1,7 +1,4 @@
 <header>
-    <%= javascript_include_tag("c3.min.js") %>
-    <%= javascript_include_tag("d3.min.js") %>
-    <%= javascript_include_tag("jquery.matchHeight-min.js") %>
     <nav class="navbar navbar-pf-vertical">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle">
@@ -11,36 +8,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="navbar-brand">
-                <%= image_tag("ggc_web_color", width: "72") %>
+                <%= image_tag("ggc_web_color", width: "72", class: "navbar-brand-icon") %>
+                <span class="navbar-brand-name" style="font-size: 22px; vertical-align: middle;">Geneva Gaming Convention</span>
             </a>
         </div>
-        <nav class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right navbar-iconic">
-                <li class="dropdown">
-                    <a class="dropdown-toggle nav-item-iconic" id="dropdown_about" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        <span title="Help" class="fa pficon-info"></span>
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown_about">
-                        <li>
-                            <a href="#" data-toggle="modal" data-target="#about-modal">About</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle nav-item-iconic" id="dropdown_user_pref" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        <span title="Username" class="fa pficon-user"></span>
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown_user_pref">
-                        <li><a href="#">Preferences</a></li>
-                        <li>
-                            <%= link_to "Logout", logout_path, method: :delete %>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
     </nav>
     <%= render 'menu_lat' %>
 </header>
