Setup Capistrano & add user's addresses

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8,3 +8,12 @@ header{
 a.navbar-brand:hover{
     background-color: none;
 }
+
+
+.blank-slate-pf{
+    padding: 30px 30px;
+}
+
+h1.card-pf-title{
+    font-size: 18px !important;
+}
