--- a/app/views/application/_menu_top.html.erb
+++ b/app/views/application/_menu_top.html.erb
@@ -13,5 +13,7 @@
             </a>
         </div>
     </nav>
+    <div id="notif_location" class="toast-notifications-list-pf">
+    </div>
     <%= render 'menu_lat' %>
 </header>
