--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html class="layout-pf layout-pf-fixed transitions">
 <head>
     <title>GGCWebsite</title>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
     <%= javascript_include_tag("c3.min.js") %>
     <%= javascript_include_tag("d3.min.js") %>
     <%= javascript_include_tag("jquery.matchHeight-min.js") %>
