--- a/app/views/address/_modal_new_addr.html.erb
+++ b/app/views/address/_modal_new_addr.html.erb
@@ -1,4 +1,4 @@
-<script src="//maps.googleapis.com/maps/api/js"></script>
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyANm0tvNm3DJjbHRK_6FL0sYaRhLmVrUrI&language=en"></script>
 <%= render :partial => 'show_notif.js.erb' %>
 <div class="modal fade" id="new_addr_modal" tabindex="-1" role="dialog" aria-labelledby="new_addr_modal_label" aria-hidden="true">
   <div class="modal-dialog">
