--- a/app/views/register_mailer/welcome.html.erb
+++ b/app/views/register_mailer/welcome.html.erb
@@ -75,7 +75,7 @@
               </tr>
               <tr>
                 <td data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="left" style="font:bold 16px/25px Arial, Helvetica, sans-serif; color:#888; padding:0 0 23px;">
-                  If you have any questions, feel free to contact us at <%= mail_to "contact@ggc.events" %>.<br/>
+                  If you have any questions, feel free to contact us at <%= mail_to "contact@ggc.ch" %>.<br/>
                   Your GGC team.
                 </td>
               </tr>
