--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,12 @@
   </p>
 </div>
 <% end %>
-<h1>Hi <%= @user.name.capitalize %></h1>
+<div class="row">
+  <div class="col-md-2" style="height:96px; text-align:right;">
+    <img src="<%= gravatar_image_url(current_logged_user.mail.gsub('spam', 'mdeering'), size: 192) %>
+    " alt="<%= current_logged_user.name %>" class="img-circle" height="96">
+  </div>
+  <div class="col-md-10" style="height:96px;">
+    <h1 style="line-height: 66px; vertical-align:middle;">Hi <%= @user.name.capitalize %></h1>
+  </div>
+</div>
