Add account status datas

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,3 +14,9 @@
     <h1 style="line-height: 66px; vertical-align:middle;">Hi <%= @user.name.capitalize %></h1>
   </div>
 </div>
+
+<div class="row" style="margin-top:2em;">
+  <%= render 'account_status' %>
+  <div class="col-md-8">
+  </div>
+</div>
