Reset password feature now working
, little responsive optimization

--- a/app/views/reset_password/_mail_form.html.erb
+++ b/app/views/reset_password/_mail_form.html.erb
@@ -6,9 +6,9 @@
   </div>
 </div>
 <div class="form-group">
-  <div class="col-md-offset-6 col-sm-6 col-md-6 submit">
+  <div class="col-md-offset-6 col-xs-12 col-md-6 submit">
     <%= link_to "Cancel", login_path, :class => "btn btn-default btn-lg" %>
-    <button type="submit" class="btn btn-primary btn-lg">Reset password</button>
+    <button class="btn btn-primary btn-lg disable_on_clic">Reset password</button>
   </div>
 </div>
 <% end %>
