--- a/app/views/reset_password/_mail_form.html.erb
+++ b/app/views/reset_password/_mail_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for(@user, url: send_new_passwd_path,:html => {:class => 'form-horizontal'}) do |f| %>
 <div class="form-group">
-  <%= label_tag 'mail', "Email", class: 'col-sm-2 col-md-2 control-label' %>
-  <div class="col-sm-10 col-md-10">
-    <%= f.email_field :mail, class: 'form-control' %>
+  <%= label_tag 'mail', "Email", class: 'col-lg-2 control-label' %>
+  <div class="col-lg-10">
+    <%= f.email_field :mail, class: 'form-control', :required => true %>
   </div>
 </div>
 <div class="form-group">
-  <div class="col-md-offset-6 col-xs-12 col-md-6 submit">
+  <div class="col-lg-offset-6 col-xs-12 col-lg-6 submit">
     <%= link_to "Cancel", login_path, :class => "btn btn-default btn-lg" %>
     <button class="btn btn-primary btn-lg disable_on_clic">Reset password</button>
   </div>
