--- a/app/views/reset_password/_form_new_password.html.erb
+++ b/app/views/reset_password/_form_new_password.html.erb
@@ -2,13 +2,13 @@
 <div class="form-group">
   <%= label_tag 'password', "Password", class: 'col-sm-2 col-md-2 control-label'  %>
   <div class="col-sm-10 col-md-10">
-    <%= f.password_field :password, class: 'form-control'%>
+    <%= f.password_field :password, class: 'form-control', :required => true %>
   </div>
 </div>
 <div class="form-group">
   <%= label_tag 'password', "Password confirmation", class: 'col-sm-2 col-md-2 control-label'  %>
   <div class="col-sm-10 col-md-10">
-    <%= f.password_field :password_confirmation, class: 'form-control'%>
+    <%= f.password_field :password_confirmation, class: 'form-control', :required => true %>
   </div>
 </div>
 <div class="form-group">
