Users can now update their personal informations
, some UX update

--- a/app/views/users/_form_edit.html.erb
+++ b/app/views/users/_form_edit.html.erb
@@ -31,8 +31,7 @@
 </div>
 <div class="form-group">
   <div class="col-sm-offset-2 col-sm-10">
-    <button type="submit" class="btn btn-primary">Update</button>
-    <%= link_to "delete my account",user_delete_path(@user.id), :class => "btn btn-danger", :type => "button" %>
+    <button type="submit" class="btn btn-lg btn-primary">Update</button>
   </div>
 </div>
 <% end %>
