Add a Danger zone,
Highway to the Danger Zone
I'll take you
Right into the Danger Zone

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -32,3 +32,11 @@ h1.card-pf-title{
 .nav-pf-vertical {
   margin-top: 2px;
 }
+
+.danger_zone{
+  background-image: image-url("danger-zone.jpg");
+  background-color: #FFF;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: left;
+}
