--- a/app/views/address/_address_card.html.erb
+++ b/app/views/address/_address_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-md-4" id="addr_card_div">
   <div class="card-pf card-pf-accented card-pf-aggregate-status">
     <h1 class="card-pf-title">
       <span class="fa pficon-home"></span> Address
