--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -39,4 +39,11 @@ h1.card-pf-title{
   background-repeat: no-repeat;
   background-size: contain;
   background-position: left;
+  h1.card-pf-title {
+    width: 8em;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 4px;
+  }
 }
