--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
 <div class="container-fluid container-cards-pf">
   <%= render 'form_edit' %>
   <div class="row row-cards-pf">
-    <%= render 'address_card' %>
+    <%= render 'address/address_card' %>
     <%= render 'phone_card' %>
     <%= render 'game_account_card' %>
   </div>
