Update account status view

--- a/app/views/users/_account_status.html.erb
+++ b/app/views/users/_account_status.html.erb
@@ -43,7 +43,7 @@
           Phone number
         </div>
         <div class="col-md-2 col-xs-2">
-          <% if false %>
+          <% if @user.phone %>
           <span class="glyphicon pficon-ok" aria-hidden="true"></span>
           <% else %>
           <span class="glyphicon pficon-error-circle-o" aria-hidden="true"></span>
