--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -25,21 +25,13 @@
           <span>Events</span>
         </div>
         <ul class="list-group">
+          <% Event.all.each do |event| %>
           <li class="list-group-item " data-target="#event-ggc2017-tertiary">
-            <a>
-              <span class="list-group-item-value">GGC 2017</span>
-            </a>
+            <%= link_to event_path(event.id) do %>
+            <span class="list-group-item-value"><%= event.shortname %></span>
+            <% end %>
           </li>
-          <li class="list-group-item " data-target="#event-ggc2016-tertiary">
-            <a>
-              <span class="list-group-item-value">GGC 2016</span>
-            </a>
-          </li>
-          <li class="list-group-item " data-target="#event-ggc2015-tertiary">
-            <a>
-              <span class="list-group-item-value">GGC 2015</span>
-            </a>
-          </li>
+          <% end %>
         </ul>
       </div>
     </li>
