hotfix not events case

--- a/app/views/application/_empty_state.html.erb
+++ b/app/views/application/_empty_state.html.erb
@@ -9,6 +9,8 @@
     <%= info %>
   </p>
   <div class="blank-slate-pf-main-action">
+    <% if defined? action %>
     <button class="btn btn-primary btn-lg" data-toggle="<%= toggle ||= '' %>" data-target="<%= target ||= '' %>"> <%= action %> </button>
+    <% end %>
   </div>
 </div>
